# LO-MA-BAN

./: .env.example  .gitignore  README.md  config.py  exa_query.py  featherless_analyzer.py  index.html  main.py  manifest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prompt_builder.py  report_generator.py  tsconfig.json  utils.py  vite.config.ts
backend/: .env.example  .gitignore  README.md  config.py  content_risk_checker.py  dependencies.py  exceptions.py  featherless_analyzer.py  main.py  middleware.py  preview_server.py  pyproject.toml  railway.toml  report_generator.py  requirements-preview.txt  requirements.txt  scam_analyzer_prompt.py  second_stage_analyzer.py  security_api_client.py  test_second_stage_output.json  test_user_reason_input.json  url_classification_result.json  url_crawl_and_classify.js  url_crawl_and_classify.py
backend/first_stage/: featherless_analyzer.py  main.py
backend/output/: 01_security_check.json  02_llm_analysis.json  03_final_report.json
backend/output_example_normal/: 01_security_check.json  02_llm_analysis.json
backend/output_example_risk/: 01_security_check.json  02_llm_analysis.json  03_final_report.json
backend/routers/: analyze.py  persuade.py  scan.py  second_stage.py
backend/schemas/: requests.py  responses.py
backend/second_stage/: analyzer.py
backend/services/: cached_security_checker.py  content_checker.py  llm_analyzer.py  persuasion.py  quiz_generator.py  report_generator.py  scan_orchestrator.py  second_stage_analyzer.py  security_checker.py  threat_analysis.py
backend/shared/: utils.py
(+65 files in other folders)
